--- a/package.json
+++ b/package.json
@@ -1,22 +1,41 @@
 {
-  "name": "demo-context-api",
-  "version": "1.0.0",
-  "description": "",
-  "keywords": [],
-  "main": "src/index.js",
+  "name": "lab-36",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-jsonschema-form": "1.0.6",
-    "react-router-dom": "5.0.0",
-    "react-scripts": "3.0.0",
-    "uuid": "3.3.2"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.0.0"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "eslint '**/*.js'"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "export CI=true && lint-staged && yarn test",
+      "pre-push": "export CI=true && lint-staged && yarn test"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx}": "eslint '**/*.js'"
   }
 }
