--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "*.{js,jsx}": "eslint '**/*.js'"
   },
   "devDependencies": {
+    "husky": "^2.2.0",
+    "lint-staged": "^8.1.6",
     "node-sass": "^4.12.0"
   }
 }
